openshift/template/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-ex
  labels:
    app: nginx-ex
    app.kubernetes.io/component: nginx-ex
    app.kubernetes.io/instance: nginx-ex
spec:
  replicas: 2
  selector:
    matchLabels:
      deployment: nginx-ex
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: nginx-ex
    spec:
      containers:
        - name: nginx-ex
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
