openshift/template/template.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: Exposes and load balances the application pods
    labels:
      template: nginx-example
    name: nginx-example
  spec:
    ports:
    - name: web
      port: 8080
      targetPort: 8080
    selector:
      name: nginx-example
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      template.openshift.io/expose-uri: http://{.spec.host}{.spec.path}
    labels:
      template: nginx-example
    name: nginx-example
  spec:
    host: ""
    to:
      kind: Service
      name: nginx-example
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      description: Keeps track of changes in the application image
    labels:
      template: nginx-example
    name: nginx-example
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      description: Defines how to build the application
      template.alpha.openshift.io/wait-for-ready: "true"
    labels:
      template: nginx-example
    name: nginx-example
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: nginx-example:latest
    source:
      contextDir: ""
      git:
        ref: ""
        uri: ""
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: nginx:1.20-el8
          namespace: openshift
      type: Source
    triggers:
    - type: ImageChange
    - type: ConfigChange
    - github:
        secret: 7cTYVpRUwYpoJxipYyD22x3ADMLNxproFLPvejsU
      type: GitHub
    - generic:
        secret: tugYunKtN6vnIQNHShqiuFnt8oqQPvRsNt0MD3Jg
      type: Generic
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      description: Defines how to deploy the application server
      template.alpha.openshift.io/wait-for-ready: "true"
    labels:
      template: nginx-example
    name: nginx-example
  spec:
    replicas: 2
    selector:
      name: nginx-example
    strategy:
      type: Rolling
    template:
      metadata:
        labels:
          name: nginx-example
        name: nginx-example
      spec:
        containers:
        - env: []
          image: ' '
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 3
          name: nginx-example
          ports:
          - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            timeoutSeconds: 3
          resources:
            limits:
              memory: 512Mi
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - nginx-example
        from:
          kind: ImageStreamTag
          name: nginx-example:latest
      type: ImageChange
    - type: ConfigChange
kind: List
metadata: {}
